tests/invalid/indentation1.nt
# invalid indentation, inconsistent indent indent
key:
    > value 1
  > value 2
